build: reduce size of docker image